// Copyright (c) Meta Platforms, Inc. and affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

#pragma once

#include <chrono>
#include <memory>
#include <optional>
#include <string>
#include <string_view>
#include <vector>

#include <cachelib/allocator/CacheAllocator.h>
#include <folly/logging/xlog.h>

namespace cachelib {
namespace grpc_server {

// Configuration for the cache manager
struct CacheConfig {
  // Cache name for identification
  std::string cacheName = "grpc-cachelib";

  // DRAM cache size in bytes (default: 1GB)
  size_t cacheSize = 1ULL * 1024 * 1024 * 1024;

  // Default pool name
  std::string defaultPoolName = "default";

  // Enable NVM (flash) cache
  bool enableNvm = false;

  // Path to NVM device/file
  std::string nvmCachePath;

  // NVM cache size in bytes (default: 10GB)
  size_t nvmCacheSize = 10ULL * 1024 * 1024 * 1024;

  // NVM block size
  uint32_t nvmBlockSize = 4096;

  // Number of NVM reader threads
  uint32_t nvmReaderThreads = 32;

  // Number of NVM writer threads
  uint32_t nvmWriterThreads = 32;

  // Enable io_uring for NVM operations
  bool enableIoUring = true;

  // LRU refresh time in seconds
  uint32_t lruRefreshTime = 60;

  // Enable access stats tracking
  bool enableStats = true;

  // Maximum item size (default: 4MB)
  size_t maxItemSize = 4 * 1024 * 1024;
};

// Result of a Get operation
struct GetResult {
  bool found = false;
  std::string value;
  int64_t ttlRemaining = 0;  // Remaining TTL in seconds, 0 if no expiry
};

// Statistics for the cache
struct CacheStats {
  int64_t totalSize = 0;
  int64_t usedSize = 0;
  int64_t itemCount = 0;
  double hitRate = 0.0;
  int64_t getCount = 0;
  int64_t hitCount = 0;
  int64_t missCount = 0;
  int64_t setCount = 0;
  int64_t evictionCount = 0;
  bool nvmEnabled = false;
  int64_t nvmSize = 0;
  int64_t nvmUsed = 0;
  int64_t uptimeSeconds = 0;
};

// CacheManager wraps CacheLib and provides a simple key-value interface
class CacheManager {
 public:
  using Cache = facebook::cachelib::LruAllocator;
  using CacheAllocatorConfig = Cache::Config;
  using PoolId = facebook::cachelib::PoolId;
  using WriteHandle = Cache::WriteHandle;
  using ReadHandle = Cache::ReadHandle;

  explicit CacheManager(const CacheConfig& config);
  ~CacheManager();

  // Disable copy and move
  CacheManager(const CacheManager&) = delete;
  CacheManager& operator=(const CacheManager&) = delete;
  CacheManager(CacheManager&&) = delete;
  CacheManager& operator=(CacheManager&&) = delete;

  // Initialize the cache - must be called before any operations
  bool initialize();

  // Shutdown the cache gracefully
  void shutdown();

  // Get a value by key
  GetResult get(std::string_view key);

  // Set a value with optional TTL (0 = no expiration)
  bool set(std::string_view key, std::string_view value, uint32_t ttlSeconds = 0);

  // Delete a key, returns true if the key existed
  bool remove(std::string_view key);

  // Check if a key exists
  bool exists(std::string_view key);

  // Get multiple values at once
  std::vector<GetResult> multiGet(const std::vector<std::string>& keys);

  // Get cache statistics
  CacheStats getStats() const;

  // Check if cache is initialized and ready
  bool isReady() const { return cache_ != nullptr; }

 private:
  // Configure NVM cache if enabled
  void configureNvmCache(CacheAllocatorConfig& cacheConfig);

  CacheConfig config_;
  std::unique_ptr<Cache> cache_;
  PoolId defaultPoolId_;
  std::chrono::steady_clock::time_point startTime_;

  // Stats counters
  mutable std::atomic<int64_t> getCount_{0};
  mutable std::atomic<int64_t> hitCount_{0};
  mutable std::atomic<int64_t> missCount_{0};
  mutable std::atomic<int64_t> setCount_{0};
};

}  // namespace grpc_server
}  // namespace cachelib
